Fixed images spacing and links, improved font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ main {
 .page-section p {
     margin-bottom: 20px;
     margin-left: 20px;
-    font-size: 20px;
+    font-size: 28px;
 }
 
 .flex-container {
@@ -135,22 +135,23 @@ main {
 .flex-item {
     border: 5px solid blue;
     display: flex;
-    min-height: 250px;
-    max-height: 250px;
+    min-height: 300px;
+    max-height: 300px;
     flex-basis: calc(50%- 1em);
     align-items: flex-end;
     padding: 0 0 20px 0;
     margin: 0.5em;
     text-decoration: none;
+    -webkit-text-stroke: 2px black;
     background-blend-mode: soft-light;
     background-size: 150%;
-    font-size: 2rem;
-    color: black;
+    font-size: 2.5rem;
+    color: white;
 }
 
 .flex-item:first-child {
-    min-height: 500px;
-    flex-basis: 75%;
+    /* min-height: 500px;
+    flex-basis: 40%; */
     background-image: url("../images/calculator.png");
     background-position: "center";
     background-size: cover;
@@ -158,20 +159,28 @@ main {
 }
 
 .flex-item:nth-child(2) {
-    background-color: red;
+    background-image: url("../images/buzzer.jpeg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .flex-item:nth-child(3) {
-    background-image: url("../images/form.png");
+    background-image: url("../images/paint.png");
     background-position: center;
-    /* height: 300px; */
     background-size: cover;
     background-repeat: no-repeat;
 }
 .flex-item:nth-child(4) {
-    background-color: red;
+    background-image: url("../images/form.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .flex-item:nth-child(5) {
-    background-color: red;
+    background-image: url("../images/message.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .flex-item:hover {
